--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,8 @@ scikit-image==0.19.1
 scikit-learn==1.0.2
 matplotlib
 h5py==2.10.0
-tensorflow-addons
+tensorflow-addons==0.16.1
+nltk==3.7
+gensim==4.1.2
+textblob==0.17.1
+ipynbname
